<resources>
    <string name="app_name">SHAPPE</string>
    <string name="title">SHAPPE</string>
    <string name="slogan">No matter what you are:whether you are at home, or in the office, or on the beach, we will  keep you fit.</string>
    <string name="signup">SIGN UP</string>
    <string name="signin">SIGN IN</string>
    <string name="hint">Username</string>
    <string name="hint2">Age(10+)</string>
    <string name="hint3">Gender(F/M)</string>
    <string name="hint4">Password</string>
    <string name="physical">Physical</string>
    <string name="psychological">Psychological</string>
    <string name="todo">TODO</string>
    <string name="exer">Exercise</string>
    <string name="food">Food</string>
    <string name="work">Workout</string>
    <string name="bmi">BMI</string>
    <string name="about">About</string>
    <string name="dep">Depression</string>
    <string name="title_activity_workout_layout">WorkoutLayout</string>
    <string name="seven">7 Minutes Workout</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="full">Full Workout</string>
    <string name="quiz">Quiz</string>
    <string name="weight">Weight (kg)</string>
    <string name="height">Height (cms)</string>
    <string name="very_severely_underweight">Very Severely Underweight</string>
    <string name="severely_underweight">Severely Underweight</string>
    <string name="underweight">Underweight</string>
    <string name="normal">Normal</string>
    <string name="overweight">Overweight</string>
    <string name="obese_class_i">Moderately Obese</string>
    <string name="obese_class_ii">Severely Obese</string>
    <string name="obese_class_iii">Very Severely Obese</string>
    <string name="calculate">Calculate</string>
    <string name="close">Close</string>
    <string name="gm">gm</string>
    <string name="calculate_your_calorie_intake">Calculate your calorie intake</string>
    <string name="ocd">OCD</string>
    <string name="anxiety">Anxiety</string>
    <string name="Quiz">Quiz</string>
    <string name="next">Next</string>
    <string name="food_item">Food Item</string>
    <string name="measure">Measure</string>
    <string name="quantity">Quantity</string>
    <string name="_0">0</string>
    <string name="name">Name</string>
    <string name="reset">RESET</string>
    <string name="FALSE">FALSE</string>
    <string name="ocdq1">Are you having repititive unwanted thoughts?</string>
    <string name="depq1">Do you have little or no interest in doing things?</string>
    <string name="anxq1">Are you able to relax?</string>
    <string name="TRUE">TRUE</string>
    <string name="calorie">Calorie</string>
    <string name="add">ADD</string>
    <string name="goback">GO BACK</string>
    <string name="delete">DELETE</string>
    <string name="bmical">BMI CALCULATOR</string>
    <string name="testi">Testimonials</string>
    <string name="white">White Music</string>
    <string name="more">more</string>
    <string name="intro1">Did you know that taking care of your mental/emotional health is just as important for a long healthy life as taking care of your physical health?</string>
    <string name="intro2">
This app has both physical as well as psychological benefits.
Explore the by clicking the buttons below.</string>
    <string name="intro3">Each person is different. The amount of calories needed depends on age, gender, height, weight, goals, body composition and metabolic rate.  You can estimate the calories needed to maintain your body weight by using the feature below.</string>
</resources>
