<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="@color/white"
    tools:context="com.shappe.shappe.GridLayout"
    >

    <RelativeLayout
        android:layout_weight="8"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/textGrid"
            android:text="@string/physical"
            android:fontFamily="cursive"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"
            android:textSize="44sp"
            android:textColor="@color/black"
            android:layout_centerInParent="true"
            android:layout_width="160dp"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <ImageButton
        android:id="@+id/image1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/caloriecount"
        android:contentDescription="@string/food"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="4dp"
        />

    <ImageButton
        android:id="@+id/image2"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/workout"
        android:contentDescription="@string/work"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="4dp"/>

    <ImageButton
        android:id="@+id/image3"
        android:background="@drawable/bmi1"
        android:contentDescription="@string/bmi"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

</LinearLayout>
