<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.shappe.shappe.MainActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="116dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="80sp" />

    <TextView
        android:id="@+id/txtSlogan"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/slogan"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:background="@color/colorAccent"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <Button
    android:id="@+id/btnSignIn"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/btnSignUp"
    android:layout_alignBottom="@+id/btnSignUp"
    android:layout_alignParentEnd="true"
    android:layout_alignParentRight="true"
    android:layout_marginEnd="22dp"
    android:layout_marginRight="22dp"
    android:background="@color/sign"
    android:text="@string/signin"
    android:textColor="@color/white"
    android:textStyle="bold" />


</RelativeLayout>
