<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="@color/white"
    tools:context="com.shappe.shappe.QuizPsy"
    >

    <RelativeLayout
        android:layout_weight="8"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/textGrid"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="75dp"
            android:layout_marginRight="75dp"
            android:fontFamily="cursive"
            android:text="@string/Quiz"
            android:textColor="@color/black"
            android:textSize="44sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <ImageButton
        android:id="@+id/imagee1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/ocd"
        android:contentDescription="@string/ocd"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="4dp"
        />

    <ImageButton
        android:id="@+id/imagee2"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/anxiety"
        android:contentDescription="@string/anxiety"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="4dp"/>

    <ImageButton
        android:id="@+id/imagee3"
        android:background="@drawable/dep"
        android:contentDescription="@string/dep"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>


</LinearLayout>
