<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.shappe.shappe.BMI"
    android:background="@drawable/back1">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.popupwindow.MainActivity"
        android:id="@+id/linearLayout1"
        >
        <Button
            android:id="@+id/showPopupBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="end"
            android:background="@drawable/ic_info_black_24dp" />


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="150dp"
            android:text="@string/bmical"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold" />



    <EditText
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/weight"
        android:textAlignment="center"
        android:ems="6"
        android:inputType="number|numberDecimal"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:hint="@string/height"
        android:textAlignment="center"
        android:ems="6"
        android:inputType="number|numberDecimal"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginBottom="70dp"


        />

        <Button
            android:id="@+id/calc"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="13dp"
            android:background="@color/colorPrimaryDark"
            android:onClick="calculateBMI"
            android:text="@string/calculate"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>
