<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.shappe.shappe.ocdq1">

    <TextView
        android:id="@+id/question"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/ocdq1"
        android:textColor="@color/white"
        android:textSize="30sp" />


    <TextView
        android:id="@+id/Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="0"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnTrue"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="250dp"
        android:background="@color/sign"
        android:text="@string/TRUE"
        android:textColor="@color/white"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/btnFalse"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="150dp"
        android:background="@color/sign"
        android:text="@string/FALSE"
        android:textColor="@color/white"
        android:textStyle="bold"
        />

</RelativeLayout>
